fixed alignment issues

--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-* {
-    border: 1px solid red;
-}
 
 body {
     font-family: 'Roboto', sans-serif;   
